Fix unable to focus title on firefox

--- a/src/app/entry/entry-content/measures/measures.component.scss
+++ b/src/app/entry/entry-content/measures/measures.component.scss
@@ -25,6 +25,10 @@
           bottom: -4px;
         }
       }
+      .pia-measure-title {
+        font-size: 1.75rem;
+        padding: 8px 0 8px 12px;
+      }
       textarea {
         overflow: hidden;
         resize: none;
