--- a/src/app/structures/entry/entry-content/measures/measures.component.scss
+++ b/src/app/structures/entry/entry-content/measures/measures.component.scss
@@ -25,6 +25,10 @@
           bottom: -4px;
         }
       }
+      .pia-measure-title {
+        font-size: 1.75rem;
+        padding: 8px 0 8px 12px;
+      }
       textarea {
         overflow: hidden;
         resize: none;
@@ -33,8 +37,7 @@
         width: 100%;
         background-color: $pia-white;
         font-size: 1.75rem;
-        padding: 8px 0;
-        padding-left: 12px;
+        padding: 8px 0 8px 12px;
         line-height: 18px;
         color: $pia-dark-black;
         &::placeholder {
